[project]
name = "qept"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cmake>=4.2.1",
    "gurobipy>=13.0.1",
    "pennylane>=0.44.0",
    "qemcmc",
]

[tool.uv.sources]
qemcmc = { git = "https://github.com/Stuartferguson00/QeMCMC" }
